visophyte mods, do not commit to real repo!

--- a/content/searchResults.xhtml
+++ b/content/searchResults.xhtml
@@ -25,6 +25,10 @@
       src="chrome://experimentaltoolbar/content/innerDOM.js"></script>
   <script type="application/javascript;version=1.8"
       src="chrome://experimentaltoolbar/content/searchResults.js"></script>
+  <script type="application/javascript;version=1.8"
+      src="chrome://visophyte/content/visophyte.js"></script>
+  <script type="application/javascript;version=1.8"
+      src="chrome://visophyte/content/gloda-phyte.js"></script>
   </head>
 <body onload="OnLoad()">
   <div id="window">
