--- a/content/message.html
+++ b/content/message.html
@@ -2,6 +2,9 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<style type="text/css">
+#body { font-family: sans-serif; font-size: 80%; }
+</style>
 </head>
 <body id="body">
 </body></html>
