remove duplicates in search results view, and queue glodamessage setting in the conversation view. the latter speeds up those displays a lot.  will apply the same techniques in searchresults view tomorrow

--- a/content/searchResults.xhtml
+++ b/content/searchResults.xhtml
@@ -33,6 +33,8 @@
   <script type="application/javascript;version=1.8"
       src="chrome://experimentaltoolbar/content/utils.js"></script>
   <script type="application/javascript;version=1.8"
+      src="chrome://experimentaltoolbar/content/threader.js"></script>
+  <script type="application/javascript;version=1.8"
       src="chrome://experimentaltoolbar/content/searchResults.js"></script>
   </head>
 <body onload="OnLoad()">
