add protovis to see breakage

--- a/content/searchResults.xhtml
+++ b/content/searchResults.xhtml
@@ -36,6 +36,8 @@
       src="chrome://experimentaltoolbar/content/threader.js"></script>
   <script type="application/javascript;version=1.8"
       src="chrome://experimentaltoolbar/content/searchResults.js"></script>
+  <script type="application/javascript;version=1.8"
+      src="chrome://experimentaltoolbar/content/protovis.js"></script>
   </head>
 <body onload="OnLoad()">
   <div id="window">
